Clean up some findbugs warnings.